product detail page

--- a/public/content/style.css
+++ b/public/content/style.css
@@ -1,9 +1,24 @@
-body {
-  padding-top: 70px;
-  padding-bottom: 70px;
+html{
+  position: relative;
+  min-height: 100%;
 }
-.media-object__small {
-  width: 300px;
+
+body {
+  /* Required for navbar fixed-top */
+  padding-top: 70px;
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  margin-bottom: 0px;
+}
+
+.thumbnail__detail--mediumsize{
+
 }
 
 .badge{
