Routing and products listing

--- a/app/products/products.component.html
+++ b/app/products/products.component.html
@@ -1,20 +1,16 @@
 <div class="row">
   <div class="col-md-12">
-    <div class="col-md-4">
-        <!-- <a ui-sref="product({productId : {{product.Id}} })" class="thumbnail">
-          <img ng-src="{{product.image}}" alt="...">
-        </a> -->
-      <!-- <div class="caption">
-          <h4 class="">{{product.name}}<span class="badge">{{product.price | currency:"$":0}}</span></h4>
-          <p>{{product.description}}</p>
-          <a ui-sref="product({productId : {{product.Id}} })" class="btn btn-primary" role="button">Détails</a>
-      </div> -->
-      <div class="card" *ngFor="#apparel of apparels">
-        <img class="card-img-top" data-src="..." alt="Card image cap">
+    <div class="col-md-4" *ngFor="#apparel of apparels">
+      <div class="card">
         <div class="card-block">
-          <h4 class="card-title">{{apparel.name}} {{apparel.price}}</h4>
+          <h4 class="card-title">{{apparel.name}}</h4>
+          <h6 class="card-subtitle text-muted">{{apparel.price | currency:'CAD':true}}</h6>
+        </div>
+        <img class="card-img-top" data-src="{{apparel.imagePath}}" alt="Card image cap">
+        <div class="card-block">
           <p class="card-text">{{apparel.description}}</p>
-          <a href="#" class="btn btn-primary">Button</a>
+          <a href="#" class="card-link">Plus de détails</a>
+          <a href="#" class="btn btn-primary">Ajouter au pannier</a>
         </div>
       </div>
     </div>
