--- a/app/app/app.component.html
+++ b/app/app/app.component.html
@@ -5,10 +5,10 @@
 
 <div class="container">
   <div class="collapse navbar-toggleable-xs" id="navbarCollapse">
-      <a class="navbar-brand" href="#">{{title}}</a>
+      <a class="navbar-brand" [routerLink]="['Home']">{{title}}</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Apparel</a>
+          <a [routerLink]="['Apparels']" class="nav-link" href="#">Apparels</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -18,5 +18,5 @@
 </div><!-- ./container -->
 </nav>
 <div class="container">
-<yaecs-products></yaecs-products>
+<router-outlet></router-outlet>
 </div>
