Actives on menu bar

--- a/app/product/product.component.html
+++ b/app/product/product.component.html
@@ -9,7 +9,7 @@
         <div class="card-block">
           <p class="card-text">{{apparel.description}}</p>
           <a href="#" class="btn btn-primary">Ajouter au pannier</a>
-          <button class="btn btn-default" (click)="goBack()">Back</button>
+          <button class="btn btn-danger" (click)="goBack()">Back</button>
         </div>
       </div>
     </div>
