--- a/app/app/app.component.html
+++ b/app/app/app.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-toggleable-xs" id="navbarCollapse">
       <a class="navbar-brand" [routerLink]="['Home']">{{title}}</a>
       <ul class="nav navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item" [class.active]="isActive(['Apparels'])">
           <a [routerLink]="['Apparels']" class="nav-link" href="#">Apparels</a>
         </li>
         <li class="nav-item">
